# dbt-llm-evals

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dbt_project.yml  package-lock.yml  pyproject.toml
docs/: ARCHITECTURE.md  PACKAGE_OVERVIEW.md  QUICKSTART.md  STRUCTURE.md  docs.json
examples/: example_queries.sql
examples/example_project_bigquery/: .gitignore  dbt_project.yml
examples/example_project_bigquery/seeds/: support_tickets_seed.csv
examples/example_project_databricks/: dbt_project.yml
examples/example_project_snowflake/: dbt_project.yml  package-lock.yml
examples/example_project_snowflake/macros/: generate_schema_name.sql
integration_tests/: example_config.yml  test_snowflake_cortex.sql
macros/adapters/: dispatch.sql
macros/adapters/bigquery/: ai_functions.sql
macros/adapters/databricks/: ai_functions.sql
macros/adapters/snowflake/: ai_functions.sql
macros/core/: baseline_check.sql  capture_io.sql  ensure_raw_tables_exist.sql  get_package_schema.sql
macros/judge/: build_judge_prompt.sql
models/core/: _llm_evals__models.yml  llm_evals__baselines.sql  llm_evals__captures.sql  llm_evals__registry.sql  llm_evals__setup.sql
models/evaluation/: _llm_evals__models.yml  llm_evals__eval_scores.sql  llm_evals__judge_evaluations.sql
models/monitoring/: _llm_evals__models.yml  llm_evals__alerts.sql  llm_evals__capture_status.sql  llm_evals__drift_detection.sql  llm_evals__performance_summary.sql
tests/: test_example_projects.py  test_project_structure.py  test_sql_compilation.py
(+4 files in other folders)
